kubernetes/apps/default/rocketchat/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rocketchat
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Le Chat
    gethomepage.dev/group: Superquinquin
    gethomepage.dev/icon: rocket-chat.png
    gethomepage.dev/description: Messagerie (Rocket.Chat)
    gethomepage.dev/siteMonitor: "https://lechat.${SECRET_DOMAIN}"
spec:
  hostnames:
    - "lechat.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: rocketchat-rocketchat
          port: 80
